--- a/acercade.html
+++ b/acercade.html
@@ -74,7 +74,7 @@
         <div class="row">
             <div class="col-acercade3 col-xs-12 hidden-xs">
             	<div>
-            		<img src="images/Actual.jpg" alt="" class="img-responsive image-acercade xs-hidden">
+            		<img src="images/actual.jpg" alt="" class="img-responsive image-acercade xs-hidden">
             	</div>
             </div>
         </div>
