--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
               <div class="item active">
-                  <img src="images/carousel/Zinco1.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/zinco1.jpg" alt="..." class="img-responsive carousel-img">
                   <div class="carousel-caption">
                       <h3>Zinco Jazz Club - Ciudad de México </h3>
                   </div>
               </div>
               <div class="item">
-                  <img src="images/carousel/Zinco2.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/zinco2.jpg" alt="..." class="img-responsive carousel-img">
               </div>
               <div class="item">
-                  <img src="images/carousel/Zinco3.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/zinco3.jpg" alt="..." class="img-responsive carousel-img">
               </div>
               <div class="item">
-                  <img src="images/carousel/Breve1.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/breve1.jpg" alt="..." class="img-responsive carousel-img">
                   <div class="carousel-caption">
                       <h3>Breve Espacio - Puebla</h3>
                   </div>
               </div>
               <div class="item">
-                  <img src="images/carousel/Breve2.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/breve2.jpg" alt="..." class="img-responsive carousel-img">
               </div>
               <div class="item">
-                  <img src="images/carousel/Breve3.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/breve3.jpg" alt="..." class="img-responsive carousel-img">
               </div>
           </div>
           <!-- Controls -->
@@ -101,9 +101,9 @@
             <h3>Concierto en Los korales</h3>
             <p class="text-eventos">
               Invitados: Clepsidra 
-              <img src="images/clepsidra" alt="" class="img-invitado1">
+              <img src="images/clepsidra" alt="logo-clepsidra" class="img-invitado1">
             </p>   
-            <img src="images/korales.png" alt="" class="img-ubicacion1"> 
+            <img src="images/korales.png" alt="korales" class="img-ubicacion1"> 
           </div>
         </div>
         <div class="col col-xs-12 col-sm-6">
