se agregan reglas al css/style.css, se cambia texto del footer de todas las pagina, se modifica la pagina acercade.html.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Adagio Gitano</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -112,7 +112,7 @@
     </main>
     <footer>
         <section class="footer">
-            <h6>Para mas información puedes seguirnos en:</h6>
+            <h6>Puedes seguirnos también en:</h6>
             <ul>
                 <li><a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a></li>
                 <li><a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a></li>
