--- a/multimedia.html
+++ b/multimedia.html
@@ -74,7 +74,7 @@
     </main>
     <footer>
         <section class="footer">
-            <h6>Para mas información puedes seguirnos en:</h6>
+            <h6>Puedes seguirnos también en:</h6>
             <ul>
                 <li><a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a></li>
                 <li><a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a></li>
