--- a/multimedia.html
+++ b/multimedia.html
@@ -81,7 +81,7 @@
             </ul>
         </section>
     </footer>
-    <script src="js/Multimedia.js"></script>
+    <script src="js/multimedia.js"></script>
 </body>
 
 </html>
