Se cambia el codigo de la pagina de multimedia.html y el script de multimedia.js

--- a/multimedia.html
+++ b/multimedia.html
@@ -53,7 +53,7 @@
                         <div id="playlist">
                             <h4>Lista de reproducción</h4>
                             <ul>
-                                <li class="active"><a href="Audio/Olvidar">Olvidar</a></li>
+                                <li class="active"><a href="Audio/Olvidar.mp3">Olvidar</a></li>
                                 <li><a href="Audio/Rumor.mp3">Rumor</a></li>
                                 <li><a href="Audio/Versos de arena.mp3">Versos de arena</a></li>
                             </ul>    
