Se agrega el hipervinculo de la pagina de contacto.html en las demas paginas, para agregar la pagina contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -33,16 +33,23 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="multimedia.html">Multimedia</a></li>
                         <li><a href="acercade.html">Acerca de</a></li>
-                        <li class="active"><a href="Contacto.html">Contacto<span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="contacto.html">Contacto<span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <main class="container informacion">
-        <form role="form" class="form-group col">
-            <h2>Contacto</h2>
-            <table class="table col">
+        <form role="form" class="form-group col-contacto">
+            <h3>Para mas información por favor contactarnos a:</h3>
+            <p class="contacto">
+                Correo: adagiogitano4@gmail.com
+            </p>
+            <p class="contacto">
+                telefono: (506)6011-3685
+            </p>
+            
+            <!-- <table class="table col">
                 <tr>
                     <td colspan="30%">
                         <label for="txtNombre" class="label-control has-error">Nombre completo </label>
@@ -78,7 +85,7 @@
                         <button type="submit" class="btn btn-default right">Enviar</button>
                     </td>
                 </tr>
-            </table>
+            </table> -->
         </form>
     </main>
     <footer>
