--- a/acercade.html
+++ b/acercade.html
@@ -32,7 +32,7 @@
                     	<li><a href="index.html">Inicio</a></li>                        
                         <li><a href="multimedia.html">Multimedia</a></li>
                         <li class="active"><a href="acercade.html">Acerca de<span class="sr-only">(current)</span></a></li>
-                        <!-- <li><a href="Contacto.html">Contacto</a></li> -->
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
