--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li class="active"><a href="index.html" class="active">Inicio<span class="sr-only">(current)</span></a></li>
                         <li><a href="multimedia.html">Multimedia</a></li>
                         <li><a href="acercade.html">Acerca de</a></li>
-                        <!-- <li><a href="Contacto.html">Contacto</a></li> -->
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
