--- a/multimedia.html
+++ b/multimedia.html
@@ -34,7 +34,7 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li class="active"><a href="multimedia.html">Multimedia<span class="sr-only">(current)</span></a></li>
                         <li><a href="acercade.html">Acerca de</a></li>
-                        <!-- <li><a href="Contacto.html">Contacto</a></li> -->
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
