Se actualiza el codigo de la pagina de contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
                 Correo: adagiogitano4@gmail.com
             </p>
             <p class="contacto">
-                telefono: (506)6011-3685
+                Teléfono: (506)6011-3685
             </p>
             
             <!-- <table class="table col">
