Se agrega el video versos de arena de youtube y se le da estilos.

--- a/multimedia.html
+++ b/multimedia.html
@@ -63,11 +63,11 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 video playlist col4">
-                    <h2>Versos de Arena</h2>  
-                    <video controls>
-                        <source type="video/mp4" src="Video/Versos de arena.mp4" />
-                        No se puede mostrar el video.
-                    </video>
+                    <h2>Versos de Arena</h2> 
+                    <div class="video">
+                        <iframe  src="https://www.youtube.com/embed/uaxmVivHLXc" class="video-iframe">
+                        </iframe>
+                    </div> 
                 </div>
             </div>
         </div>
