--- a/multimedia.html
+++ b/multimedia.html
@@ -65,7 +65,7 @@
                 <div class="col-xs-12 video playlist col4">
                     <h2>Versos de Arena</h2> 
                     <div class="video">
-                        <iframe  src="https://www.youtube.com/embed/uaxmVivHLXc" class="video-iframe">
+                        <iframe  src="https://www.youtube.com/embed/uaxmVivHLXc" class="video-iframe" allowfullscreen>
                         </iframe>
                     </div> 
                 </div>
