--- a/contacto.html
+++ b/contacto.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-xs-hidden" >
                 <div class="text-center">
-                    <img class="img-contacto" src="images/logo.png" alt="Logo">
+                    <img class="img-contacto" src="images/img-contacto.jpg" alt="Logo">
                 </div>
             </div>
             
