Se realizan adaptaciones a la vista movil

--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
                     Teléfono: (506)6011-3685
                 </p>
             </div>
-            <div class="col-xs-12 col-sm-6 xs-hidden" >
+            <div class="col-xs-12 col-sm-6 hidden-xs" >
                 <div class="text-center">
                     <img class="img-contacto" src="images/img-contacto.jpg" alt="Logo">
                 </div>
