Se agrega un iframe para incrustar un reproductor de audio y se ponen estilos a la pagina

--- a/multimedia.html
+++ b/multimedia.html
@@ -46,18 +46,7 @@
                 <div class="col-xs-12 col">
                     <div class="playlist">
                         <h2>Música</h2>
-                        <audio id="audio" preload="auto" tabindex="0" controls="" type="audio/mpeg">
-                            <source type="audio/mp3" src="Audio/Olvidar.mp3">
-                            Sorry, your browser does not support HTML5 audio.
-                        </audio>
-                        <div id="playlist">
-                            <h4>Lista de reproducción</h4>
-                            <ul>
-                                <li class="active"><a href="Audio/Olvidar.mp3">Olvidar</a></li>
-                                <li><a href="Audio/Rumor.mp3">Rumor</a></li>
-                                <li><a href="Audio/Versos de arena.mp3">Versos de arena</a></li>
-                            </ul>    
-                        </div>
+                        <iframe class="playlist-audio" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/279292996%3Fsecret_token%3Ds-NAFtb&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
                     </div>
                 </div>
             </div>
