--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 <head>
     <meta charset="UTF-8">
-    <title>Inicio</title>
+    <title>Adagio Gitano</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+    <meta name="robots" content="index, follow" />
+    <!-- Descripcion de busquedas -->
+    <meta name="description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos como choro, bossa nova, y generos mas reconocidos como lo son el blues, el funk." />
     <!--       HOJAS DE ESTILO         -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">   
+    <!-- Region Pagina -->
+    <link rel="alternate" hreflang="es-CR" href="http://adagiogitano.github.io/"> 
+    <!--[if lt IE 9]>
+            <script src="js/lib/html5-3.6-respond-1.4.2.min.js"></script>
+        <![endif]-->
     <!--          Scripts              -->
     <script src="js/lib/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -98,16 +110,49 @@
       <div class="row">
         <div class="col col-xs-12 col-sm-6" >
           <div class="info-evento">
-            <h3>Concierto en Los korales</h3>
-            <p class="text-eventos">
-              Invitados: Clepsidra 
+            <h3>FERCORI - IMAS</h3>
+            <p>
+              Fecha: 10/12/2016
             </p>   
-            <img src="images/korales.png" alt="korales" class="img-ubicacion1"> 
+            <p>
+              Hora: 5:30 PM
+            </p>
+            <p>
+              Dirección: Calle 23, San José, Costa Rica, Antigua Aduana. 
+              <a href="https://goo.gl/maps/g3t4U8tgT5w"> Ubicación </a>
+            </p>
           </div>
         </div>
         <div class="col col-xs-12 col-sm-6">
-          
-        </div>
+          <div class="info-evento">
+            <h3>Aserrí</h3>
+            <p class="text-eventos">
+              Fecha: 11/12/2016
+            </p>   
+            <p>
+              Hora: 5:30 PM
+            </p>
+            <p>
+              Dirección: 
+              <a href="#"> Ubicación </a>
+            </p>
+          </div>
+        </div>    
+        <div class="col col-xs-12 col-sm-6">
+          <div class="info-evento">
+            <h3>Rock House Pub</h3>
+            <p>
+              Fecha: 15/12/2016
+            </p>
+            <p>
+              Hora: 8 PM
+            </p>
+            <p>
+              Dirección: 50 mts oeste del ICE de la Florida Tibás, en Plaza Tibas. 
+              <a href="https://goo.gl/maps/5PWXgjiiPCv"> Ubicación </a>
+            </p>
+          </div>
+        </div>    
       </div>
     </main>
     <footer>
