--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
 
       <div class="row">
-        <div class="col col-xs-12 col-sm-6" >
+        <div class="col col-xs-12" >
           <div class="info-evento">
             <h3>FERCORI - IMAS</h3>
             <p>
@@ -123,7 +123,7 @@
             </p>
           </div>
         </div>
-        <div class="col col-xs-12 col-sm-6">
+        <div class="col col-xs-12">
           <div class="info-evento">
             <h3>Aserrí</h3>
             <p class="text-eventos">
@@ -138,7 +138,7 @@
             </p>
           </div>
         </div>    
-        <div class="col col-xs-12 col-sm-6">
+        <div class="col col-xs-12">
           <div class="info-evento">
             <h3>Rock House Pub</h3>
             <p>
