--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
             </p>
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="col col-xs-12">
           <div class="info-evento">
             <h3>Aserrí</h3>
@@ -137,7 +139,9 @@
               <a href="#"> Ubicación </a>
             </p>
           </div>
-        </div>    
+        </div> 
+      </div>
+      <div class="row">   
         <div class="col col-xs-12">
           <div class="info-evento">
             <h3>Rock House Pub</h3>
