--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </p>
             <p>
               Dirección: Calle 23, San José, Costa Rica, Antigua Aduana. 
-              <a href="https://goo.gl/maps/g3t4U8tgT5w"> Ubicación </a>
+              <a href="https://goo.gl/maps/g3t4U8tgT5w" target="_blank"> Ubicación </a>
             </p>
           </div>
         </div>
@@ -136,7 +136,7 @@
             </p>
             <p>
               Dirección: 
-              <a href="#"> Ubicación </a>
+              <a href="#" > Ubicación </a>
             </p>
           </div>
         </div> 
@@ -153,7 +153,7 @@
             </p>
             <p>
               Dirección: 50 mts oeste del ICE de la Florida Tibás, en Plaza Tibas. 
-              <a href="https://goo.gl/maps/5PWXgjiiPCv"> Ubicación </a>
+              <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
             </p>
           </div>
         </div>    
