Proximos eventos de adagio gitano

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <main class="container informacion-index">
       <div class="row">
         <div class="col-xs-12 col3">
+          <h1>Adagio Gitano</h1>
           <h2>Proximos eventos</h2>
         </div>
       </div>
