Se realizan modificaciones en las paginas para optimización de busqueda

--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 hidden-xs" >
                 <div class="text-center">
-                    <img class="img-contacto" src="images/img-contacto.jpg" alt="Logo">
+                    <img class="img-contacto" src="images/img-contacto.jpg" alt="Adagio Gitano" />
                 </div>
             </div>
             
