--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Adagio Gitano</a>
+                    <a class="navbar-brand" href="index.html"><h1>Adagio Gitano</h1></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,28 +66,28 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
               <div class="item active">
-                  <img src="images/carousel/zinco1.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/zinco1.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
                   <div class="carousel-caption">
                       <h3>Zinco Jazz Club - Ciudad de México </h3>
                   </div>
               </div>
               <div class="item">
-                  <img src="images/carousel/zinco2.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/zinco2.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
               </div>
               <div class="item">
-                  <img src="images/carousel/zinco3.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/zinco3.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
               </div>
               <div class="item">
-                  <img src="images/carousel/breve1.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/breve1.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
                   <div class="carousel-caption">
                       <h3>Breve Espacio - Puebla</h3>
                   </div>
               </div>
               <div class="item">
-                  <img src="images/carousel/breve2.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/breve2.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
               </div>
               <div class="item">
-                  <img src="images/carousel/breve3.jpg" alt="..." class="img-responsive carousel-img">
+                  <img src="images/carousel/breve3.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
               </div>
           </div>
           <!-- Controls -->
@@ -104,7 +104,6 @@
     <main class="container informacion-index">
       <div class="row">
         <div class="col-xs-12 col3">
-          <h1>Adagio Gitano</h1>
           <h2>Proximos eventos</h2>
         </div>
       </div>
