--- a/acercade.html
+++ b/acercade.html
@@ -58,7 +58,7 @@
             	</div>    
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-            	<img src="images/origen.jpg" alt="" class="img-responsive image-acerca">
+            	<img src="images/origen.jpg" alt="Adagio Gitano" class="img-responsive image-acerca" />
             </div>
         </div>
         <div class="row">
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-acercade3 col-xs-12 hidden-xs">
             	<div>
-            		<img src="images/actual.jpg" alt="" class="img-responsive image-acercade xs-hidden">
+            		<img src="images/actual.jpg" alt="Adagio Gitano" class="img-responsive image-acercade xs-hidden" />
             	</div>
             </div>
         </div>
