Se optimiza el codigo de la pagina de index y se corrige la ortografia

--- a/acercade.html
+++ b/acercade.html
@@ -53,7 +53,7 @@
 	                    Adagio Gitano es una agrupación de Costa Rica desde el 2014 cuando <strong>José Fuentes</strong> y <strong>Manuel Illescas</strong> ambos guitarristas se unen para crear una agrupación experimental y instrumental con la participación de <strong>Gabriel Villavicencio</strong> bajista y <strong>Carlos Jimenez</strong> percusionista.
 	                </p> 
 	                <p class="text-justify">
-            			Inicialmente se trabaja con ritmos latinoamericanos como choro, pero también se logran integrar conceptos como funk, blues, bossa-nova, tango los cuales dieron lugar a la musica original para promocionar sus inicos. 
+            			Inicialmente se trabaja con ritmos latinoamericanos como choro, pero también se logran integrar conceptos como funk, blues, bossa-nova, tango los cuales dieron lugar a la música original para promocionar sus inicios. 
             		</p>
             	</div>    
             </div>
@@ -65,12 +65,12 @@
             <div class="col-acercade2 col-xs-12">
             	<div class="text-acercade1">            		
             		<p class="text-justify">	
-	                    Luego en agosto del año 2015 se cambio un poco la dinamica del grupo con la voz de <strong>Yanelly Ramírez</strong> con el fin de tocar covers latinoamericanos y seguir promocionando la musica instrumental original. Después de varios eventos se llegan a la conclusión de que la participación de Yanelly Ramírez tiene un impacto importante en la agrupación y debido a esto se integra como la voz principal.
+	                    Luego en agosto del año 2015 se cambió un poco la dinámica del grupo con la voz de <strong>Yanelly Ramírez</strong> con el fin de tocar covers latinoamericanos y seguir promocionando la música instrumental original. Después de varios eventos se llegan a la conclusión de que la participación de Yanelly Ramírez tiene un impacto importante en la agrupación y debido a esto se integra como la voz principal.
 	                </p>
 	                <p class="text-justify">
-            			Luego en setiembre del 2016 el guitarrista <strong>Manuel Illescas</strong> informa sobre su partida de la agrupación Adagio Gitano para concentrarse en otros proyectos lo cual deja un espacio faltante en la agrupación y en la cual se considera la incluision de un nuevo guitarrista. 
+            			Luego en setiembre del 2016 el guitarrista <strong>Manuel Illescas</strong> informa sobre su partida de la agrupación Adagio Gitano para concentrarse en otros proyectos lo cual deja un espacio faltante en la agrupación y en la cual se considera la inclusión de un nuevo guitarrista. 
 
-            			A las pocas semanas el guitarrista José Fuentes se encuentra con una antigua amistad <strong>Jair Sherrier</strong> el cual le propone ser el nuevo guitarrista de la agrupación y despues de una respuesta afirmativa llega a completar la alineación de la agrupación. 						
+            			A las pocas semanas el guitarrista José Fuentes se encuentra con una antigua amistad <strong>Jair Sherrier</strong> el cual le propone ser el nuevo guitarrista de la agrupación y después de una respuesta afirmativa llega a completar la alineación de la agrupación. 						
                 	</p>	
             	</div>
             </div>
