--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><h1>Adagio Gitano</h1></a>
+                    <a class="navbar-brand" href="index.html">Adagio Gitano</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -103,8 +103,9 @@
 
     <main class="container informacion-index">
       <div class="row">
-        <div class="col-xs-12 col3">
-          <h2>Proximos eventos</h2>
+        <div class="col-xs-12 col3 text-center">
+          <h1>Adagio Gitano</h1>       
+          <h2>Próximos eventos</h2>   
         </div>
       </div>
 
