Se agrega el canal de youtube en las pagina

--- a/acercade.html
+++ b/acercade.html
@@ -193,8 +193,8 @@
                     </p>
                     <p class="text-justify">
                         Gabriel Villavicencio Herrera, estudiante
-                        de bajo eléctrico de Marco Chiqui Ortiz,
-                        contrabajista de la sinfónica y bajista.
+                        de bajo eléctrico de Marco Chiqui Ortiz
+                        contrabajista de la sinfónica nacional y bajista.
                         Después el 15 de agosto del 2016,
                         estudió con el curso en línea Bajissimo
                         del profesor Marco Chiqui Ortiz.
