--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                         Hora: 5:30 PM
                     </p>
                     <p>
-                        Dirección:
-                        <a href="#"> Ubicación </a>
+                        Dirección: parque Central de Aserrí.
+                        <a href="https://goo.gl/maps/PyzjLcAgEU92"> Ubicación </a>
                     </p>
                 </div>
             </div>
@@ -175,6 +175,9 @@
                     </li>
                     <li>
                         <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
+                    </li>                    
+                    <li>
+                        <a href="https://www.youtube.com/channel/UC7lAj9rbe-RMn0ML6EPKGvQ" class="yt icono" target="_blank"></a>
                     </li>
                 </ul>
             </div>
