Se modifica una de las fechas

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         Hora: 5:30 PM
                     </p>
                     <p>
-                        Dirección: parque Central de Aserrí.
+                        Dirección: parque central de Aserrí.
                         <a href="https://goo.gl/maps/PyzjLcAgEU92"> Ubicación </a>
                     </p>
                 </div>
