Se modifican los estilos de los parrafos de la pagina acercade.html

--- a/acercade.html
+++ b/acercade.html
@@ -88,7 +88,7 @@
                 <img src="images/Integrantes/Jose.png" class="img-responsive image-acerca1" alt="José" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
-                <div class="text-acercade">
+                <div class="text-acercade2">
                     <p class="text-justify">
                         <strong>1. Jose Fuentes: Guitarrista</strong>
                     </p>
@@ -106,7 +106,7 @@
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
-                <div class="text-acercade">
+                <div class="text-acercade3">
                     <p class="text-justify">
                         <strong>2. Carlos Jiménez: Percusionista</strong>
                     </p>
@@ -136,7 +136,7 @@
                 <img src="images/Integrantes/Jair.png" class="img-responsive image-acerca1" alt="Jair" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
-                <div class="text-acercade">
+                <div class="text-acercade4">
                     <p class="text-justify">
                         <strong>3. Jair Sherrier: Guitarrista/Vocalista</strong>
                     </p>
@@ -159,7 +159,7 @@
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
-                <div class="text-acercade">
+                <div class="text-acercade5">
                     <p class="text-justify">
                         <strong>4. Yanelly Ramírez: Vocalista</strong>
                     </p>
@@ -187,7 +187,7 @@
                 <img src="images/Integrantes/Gabriel.png" alt="Gabriel" class="img-responsive image-acerca1" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
-                <div class="text-acercade">
+                <div class="text-acercade6">
                     <p class="text-justify">
                         <strong>5. Gabriel Villavicencio: Bajista</strong>
                     </p>
