se agregan imagenes de integrantes

--- a/acercade.html
+++ b/acercade.html
@@ -85,7 +85,7 @@
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/Integrantes/Jose.png" class="img-responsive image-acerca1" alt="José" />
+                <img src="images/integrantes/Jose.png" class="img-responsive image-acerca1" alt="José" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade2">
@@ -128,12 +128,12 @@
                 </div>
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/Integrantes/Carlos.png" class="img-responsive image-acerca1" alt="Carlos" />
+                <img src="images/integrantes/Carlos.png" class="img-responsive image-acerca1" alt="Carlos" />
             </div>
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/Integrantes/Jair.png" class="img-responsive image-acerca1" alt="Jair" />
+                <img src="images/integrantes/Jair.png" class="img-responsive image-acerca1" alt="Jair" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade4">
@@ -179,12 +179,12 @@
                 </div>
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/Integrantes/Yanelly.png" class="img-responsive image-acerca1" alt="Yanelly" />
+                <img src="images/integrantes/Yanelly.png" class="img-responsive image-acerca1" alt="Yanelly" />
             </div>
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/Integrantes/Gabriel.png" alt="Gabriel" class="img-responsive image-acerca1" />
+                <img src="images/integrantes/Gabriel.png" alt="Gabriel" class="img-responsive image-acerca1" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade6">
