Se agrega meta tag de google search a la pagina de index.html para realizar busquedas de la aplicación.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
     <meta name="robots" content="index, follow" />
     <!-- Descripcion de busquedas -->
-    <meta name="description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos como choro, bossa nova, y generos mas reconocidos como lo son el blues, el funk." />
+    <meta name="description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos como choro, bossa nova, y generos mas reconocidos como lo son el blues, el funk." />    
+
     <!-- FACEBOOK -->
     <meta property="og:url" content="https://adagiogitano.github.io/index.html" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Adagio Gitano" />
     <meta property="og:description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos como choro, bossa nova, y generos mas reconocidos como lo son el blues, el funk." />
     <meta property="og:image" content="images/logo.png" />
+
+    <!-- GOOGLE SEARCH -->
+    <meta name="google-site-verification" content="16Sx6mVNh-zW5LryzGHQZUEgdvYGPGAZ70O2KaQ1-NQ" />
+
     <!--       HOJAS DE ESTILO         -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
